--- a/redirect.html
+++ b/redirect.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спасибо❤️</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Добавьте стили для таймера, если требуется */
+        .timer {
+            height: 30px;
+            background: #4CAF50;
+            width: 0;
+            border-radius: 5px;
+            transition: width 0.05s;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -45,22 +55,26 @@
     </footer>
 
     <script>
-        // Функция для запроса уникальной ссылки
         async function getUniqueLink(modId) {
-            const response = await fetch(`https://yourserver.com/generate-link/${modId}`);
-            const data = await response.json();
-            return data.link;
+            // Fetch the links from localStorage or a static JSON file
+            const links = JSON.parse(localStorage.getItem('links')) || {};
+            return links[modId];
         }
 
         async function startTimer(event) {
-            event.preventDefault(); // Предотвращение перехода по ссылке до завершения таймера
+            event.preventDefault(); // Prevent the default link behavior
             const timer = document.getElementById('timer');
             const timerMessage = document.getElementById('timer-message');
             const downloadBtn = document.getElementById('download-btn');
             let width = 0;
 
-            const modId = 'sildurs'; // Установите нужный ID мода
-            const uniqueLink = await getUniqueLink(modId); // Получение уникальной ссылки
+            const modId = 'links1gpgxkgv'; // The ID you want to use
+            const uniqueLink = await getUniqueLink(modId); // Get the unique link
+
+            if (!uniqueLink) {
+                alert('Ссылка не найдена. Пожалуйста, попробуйте еще раз.');
+                return;
+            }
 
             downloadBtn.disabled = true;
 
@@ -70,16 +84,16 @@
                     timer.style.display = 'none';
                     timerMessage.style.display = 'none';
                     downloadBtn.disabled = false;
-                    // Переход по уникальной ссылке
+                    // Redirect after a short delay
                     setTimeout(() => {
                         window.location.href = uniqueLink;
-                    }, 1000); // Задержка 1 секунда
+                    }, 1000); // 1-second delay
                 } else {
                     width++;
                     timer.style.width = width + '%';
                     timer.style.background = `linear-gradient(90deg, rgba(255,105,180, ${width / 100}), rgba(0,250,154, ${width / 100}))`;
                 }
-            }, 50); // 5 секунд / 100 шагов = 50 миллисекунд на шаг
+            }, 50); // 50 milliseconds per step
         }
     </script>
 </body>
