--- a/index.html
+++ b/index.html
@@ -4,65 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
-            background: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        form {
-            margin-bottom: 20px;
-        }
-        input[type="text"], input[type="url"] {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            color: #fff;
-            background-color: #4CAF50;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            padding: 10px;
-            background: #f9f9f9;
-            margin: 5px 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        li a {
-            color: #333;
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -77,39 +19,6 @@
         <ul id="linksList"></ul>
     </div>
 
-    <script>
-        document.getElementById('linkForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const linkId = document.getElementById('linkId').value;
-            const linkUrl = document.getElementById('linkUrl').value;
-            const linksList = document.getElementById('linksList');
-
-            // Add the new link to the list
-            const listItem = document.createElement('li');
-            listItem.innerHTML = `<a href="${linkUrl}" target="_blank">${linkId}</a>`;
-            linksList.appendChild(listItem);
-
-            // Save to local storage (mocking the backend save)
-            let links = JSON.parse(localStorage.getItem('links')) || {};
-            links[linkId] = linkUrl;
-            localStorage.setItem('links', JSON.stringify(links));
-
-            // Clear the form fields
-            document.getElementById('linkId').value = '';
-            document.getElementById('linkUrl').value = '';
-        });
-
-        // Load saved links
-        window.onload = function() {
-            const links = JSON.parse(localStorage.getItem('links')) || {};
-            const linksList = document.getElementById('linksList');
-            for (const [id, url] of Object.entries(links)) {
-                const listItem = document.createElement('li');
-                listItem.innerHTML = `<a href="${url}" target="_blank">${id}</a>`;
-                linksList.appendChild(listItem);
-            }
-        };
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
