--- a/redirect.html
+++ b/redirect.html
@@ -5,16 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спасибо❤️</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Добавьте стили для таймера, если требуется */
-        .timer {
-            height: 30px;
-            background: #4CAF50;
-            width: 0;
-            border-radius: 5px;
-            transition: width 0.05s;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -35,6 +25,7 @@
             <div class="timer-container">
                 <div id="timer" class="timer"></div>
                 <p id="timer-message" class="timer-message">Нажмите на кнопку, чтобы перейти на сайт с модом</p>
+                <input type="text" id="linkIdInput" placeholder="Enter the ID for the link" required>
                 <a href="#" class="download-btn" id="download-btn" onclick="startTimer(event)">Скачать мод</a>
             </div>
         </div>
@@ -54,48 +45,8 @@
         </div>
     </footer>
 
-    <script>
-        async function getUniqueLink(modId) {
-            // Fetch the links from localStorage or a static JSON file
-            const links = JSON.parse(localStorage.getItem('links')) || {};
-            return links[modId];
-        }
-
-        async function startTimer(event) {
-            event.preventDefault(); // Prevent the default link behavior
-            const timer = document.getElementById('timer');
-            const timerMessage = document.getElementById('timer-message');
-            const downloadBtn = document.getElementById('download-btn');
-            let width = 0;
-
-            const modId = 'links1gpgxkgv'; // The ID you want to use
-            const uniqueLink = await getUniqueLink(modId); // Get the unique link
-
-            if (!uniqueLink) {
-                alert('Ссылка не найдена. Пожалуйста, попробуйте еще раз.');
-                return;
-            }
-
-            downloadBtn.disabled = true;
-
-            const interval = setInterval(() => {
-                if (width >= 100) {
-                    clearInterval(interval);
-                    timer.style.display = 'none';
-                    timerMessage.style.display = 'none';
-                    downloadBtn.disabled = false;
-                    // Redirect after a short delay
-                    setTimeout(() => {
-                        window.location.href = uniqueLink;
-                    }, 1000); // 1-second delay
-                } else {
-                    width++;
-                    timer.style.width = width + '%';
-                    timer.style.background = `linear-gradient(90deg, rgba(255,105,180, ${width / 100}), rgba(0,250,154, ${width / 100}))`;
-                }
-            }, 50); // 50 milliseconds per step
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
+
 
