--- a/redirect.html
+++ b/redirect.html
@@ -4,49 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спасибо❤️</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .content {
+            margin: 50px auto;
+            padding: 20px;
+            background: #fff;
+            max-width: 600px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .timer {
+            width: 0;
+            height: 20px;
+            background: linear-gradient(90deg, rgba(255,105,180,0), rgba(0,250,154,0));
+            border-radius: 10px;
+            margin: 10px 0;
+        }
+        .timer-message {
+            font-size: 18px;
+            margin: 20px 0;
+        }
+        .download-btn {
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            text-decoration: none;
+        }
+        .download-btn:disabled {
+            background-color: #9e9e9e;
+            cursor: not-allowed;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <a href="https://aviso.bz/?r=lordship" target="_blank" class="banner-link">
-            <div class="banner">
-                <img src="https://aviso.bz/statica/pictures/A-468.gif" alt="Рекламный баннер">
-            </div>
-        </a>
-    </header>
-
-    <hr class="divider">
-
-    <main>
-        <div class="content">
-            <div class="support-message">
-                <p>Когда вы смотрите рекламу, переходите по баннерам и проявляете активность, вы очень сильно нас поддерживаете. Спасибо!</p>
-            </div>
-            <div class="timer-container">
-                <div id="timer" class="timer"></div>
-                <p id="timer-message" class="timer-message">Нажмите на кнопку, чтобы перейти на сайт с модом</p>
-                <input type="text" id="linkIdInput" placeholder="Enter the ID for the link" required>
-                <a href="#" class="download-btn" id="download-btn" onclick="startTimer(event)">Скачать мод</a>
-            </div>
+    <div class="content">
+        <p>Когда вы смотрите рекламу, переходите по баннерам и проявляете активность, вы очень сильно нас поддерживаете. Спасибо!</p>
+        <div class="timer-container">
+            <div id="timer" class="timer"></div>
+            <p id="timer-message" class="timer-message">Нажмите на кнопку, чтобы перейти на сайт с модом</p>
+            <a href="#" class="download-btn" id="download-btn" onclick="startTimer(event)">Скачать мод</a>
         </div>
-    </main>
+    </div>
 
-    <footer>
-        <div class="social-links">
-            <a href="https://www.youtube.com" target="_blank" class="social-icon">
-                <img src="https://img.icons8.com/ios/50/ffffff/youtube-play.png" alt="YouTube">
-            </a>
-            <a href="https://www.tiktok.com" target="_blank" class="social-icon">
-                <img src="https://img.icons8.com/ios/50/ffffff/tiktok.png" alt="TikTok">
-            </a>
-            <a href="https://telegram.org" target="_blank" class="social-icon">
-                <img src="https://img.icons8.com/ios/50/ffffff/telegram-app.png" alt="Telegram">
-            </a>
-        </div>
-    </footer>
+    <script>
+        async function getUniqueLink(modId) {
+            const response = await fetch('links.json');
+            const links = await response.json();
+            return links[modId];
+        }
 
-    <script src="script.js"></script>
+        async function startTimer(event) {
+            event.preventDefault(); // Предотвращение перехода по ссылке до завершения таймера
+            const timer = document.getElementById('timer');
+            const timerMessage = document.getElementById('timer-message');
+            const downloadBtn = document.getElementById('download-btn');
+            let width = 0;
+
+            const modId = 'links1gpgxkgv'; // Установите нужный ID мода
+            const uniqueLink = await getUniqueLink(modId); // Получение уникальной ссылки
+
+            if (!uniqueLink) {
+                alert('Ссылка не найдена.');
+                return;
+            }
+
+            downloadBtn.disabled = true;
+
+            const interval = setInterval(() => {
+                if (width >= 100) {
+                    clearInterval(interval);
+                    timer.style.display = 'none';
+                    timerMessage.style.display = 'none';
+                    downloadBtn.disabled = false;
+                    // Переход по уникальной ссылке
+                    setTimeout(() => {
+                        window.location.href = uniqueLink;
+                    }, 1000); // Задержка 1 секунда
+                } else {
+                    width++;
+                    timer.style.width = width + '%';
+                    timer.style.background = `linear-gradient(90deg, rgba(255,105,180, ${width / 100}), rgba(0,250,154, ${width / 100}))`;
+                }
+            }, 50); // 5 секунд / 100 шагов = 50 миллисекунд на шаг
+        }
+    </script>
 </body>
 </html>
+
 
 
