--- a/index.html
+++ b/index.html
@@ -1,126 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
-            background: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        form {
-            margin-bottom: 20px;
-        }
-        input[type="text"], input[type="url"] {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            color: #fff;
-            background-color: #4CAF50;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            padding: 10px;
-            background: #f9f9f9;
-            margin: 5px 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        li a {
-            color: #333;
-            text-decoration: none;
-        }
-    </style>
+    <title>Спасибо❤️</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Link Manager</h1>
-        <form id="linkForm">
-            <input type="text" id="linkId" placeholder="Enter the ID" required>
-            <input type="url" id="linkUrl" placeholder="Enter the URL" required>
-            <button type="submit">Generate Short Link</button>
-        </form>
+    <header>
+        <a href="https://aviso.bz/?r=lordship" target="_blank" class="banner-link">
+            <div class="banner">
+                <img src="https://aviso.bz/statica/pictures/A-468.gif" alt="Рекламный баннер">
+            </div>
+        </a>
+    </header>
 
-        <h2>Your Short Links</h2>
-        <ul id="linksList"></ul>
-    </div>
+    <hr class="divider">
+
+    <main>
+        <div class="content">
+            <div class="support-message">
+                <p>Когда вы смотрите рекламу, переходите по баннерам и проявляете активность, вы очень сильно нас поддерживаете. Спасибо!</p>
+            </div>
+            <div class="timer-container">
+                <div id="timer" class="timer"></div>
+                <p id="timer-message" class="timer-message">Подождите, пока таймер дойдет до конца.</p>
+                <a href="#" class="download-btn" id="download-btn" onclick="startTimer(event)">Скачать мод</a>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="social-links">
+            <a href="https://www.youtube.com" target="_blank" class="social-icon">
+                <img src="https://img.icons8.com/ios/50/ffffff/youtube-play.png" alt="YouTube">
+            </a>
+            <a href="https://www.tiktok.com" target="_blank" class="social-icon">
+                <img src="https://img.icons8.com/ios/50/ffffff/tiktok.png" alt="TikTok">
+            </a>
+            <a href="https://telegram.org" target="_blank" class="social-icon">
+                <img src="https://img.icons8.com/ios/50/ffffff/telegram-app.png" alt="Telegram">
+            </a>
+        </div>
+    </footer>
 
     <script>
-        async function fetchLinks() {
-            const response = await fetch('links.json');
-            return await response.json();
+        // Функция для получения ссылки из JSON-файла на GitHub
+        async function getModLink(modId) {
+            const response = await fetch('https://raw.githubusercontent.com/ваш-пользователь/ваш-репозиторий/main/links.json');
+            const data = await response.json();
+            return data[modId];
         }
 
-        async function saveLink(id, url) {
-            const links = await fetchLinks();
-            links[id] = url;
+        async function startTimer(event) {
+            event.preventDefault(); // Предотвращение перехода по ссылке до завершения таймера
+            const timer = document.getElementById('timer');
+            const timerMessage = document.getElementById('timer-message');
+            const downloadBtn = document.getElementById('download-btn');
+            let width = 0;
 
-            // Обновление JSON-файла (замени URL на путь к серверу, если используешь сервер)
-            await fetch('update-links.json', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(links),
-            });
+            const modId = 'sildurs'; // Установите нужный ID мода
+            const modLink = await getModLink(modId); // Получение ссылки
+
+            downloadBtn.disabled = true;
+
+            const interval = setInterval(() => {
+                if (width >= 100) {
+                    clearInterval(interval);
+                    timer.style.display = 'none';
+                    timerMessage.textContent = 'Теперь вы можете перейти по ссылке.';
+                    downloadBtn.disabled = false;
+                    downloadBtn.href = modLink; // Установка ссылки
+                } else {
+                    width++;
+                    timer.style.width = width + '%';
+                    timer.style.background = `linear-gradient(90deg, rgba(255,105,180, ${width / 100}), rgba(0,250,154, ${width / 100}))`;
+                }
+            }, 50); // 5 секунд / 100 шагов = 50 миллисекунд на шаг
         }
-
-        document.getElementById('linkForm').addEventListener('submit', async function(event) {
-            event.preventDefault();
-
-            const linkId = document.getElementById('linkId').value.trim();
-            const linkUrl = document.getElementById('linkUrl').value.trim();
-            const linksList = document.getElementById('linksList');
-
-            if (!linkId || !linkUrl) {
-                alert('Please provide both ID and URL.');
-                return;
-            }
-
-            // Добавление новой ссылки в список
-            const listItem = document.createElement('li');
-            listItem.innerHTML = `<a href="${linkUrl}" target="_blank">${linkId}</a>`;
-            linksList.appendChild(listItem);
-
-            // Сохранение ссылки в JSON-файл
-            await saveLink(linkId, linkUrl);
-
-            // Очистка полей формы
-            document.getElementById('linkId').value = '';
-            document.getElementById('linkUrl').value = '';
-        });
     </script>
 </body>
 </html>
