--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script>
         // Функция для получения ссылки из JSON-файла на GitHub
         async function getModLink(modId) {
-            const response = await fetch('https://raw.githubusercontent.com/ваш-пользователь/ваш-репозиторий/main/links.json');
+            const response = await fetch('https://404-anarhist-404.github.io/link-manager/links.json');
             const data = await response.json();
             return data[modId];
         }
