--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 if (width >= 100) {
                     clearInterval(interval);
                     timer.style.display = 'none';
-                    timerMessage.textContent = 'Вы можете перейти по ссылке.';
+                    timerMessage.textContent = 'Перехожу...';
                     downloadBtn.disabled = false;
                     downloadBtn.href = modLink; // Установка ссылки
                     // Автоматическое перенаправление через 1 секунду
